config-root/jxboot-helmfile-resources/700-chartmuseum-ing.yaml
---
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: chartmuseum
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jenkins-x-chartmuseum
          servicePort: 8080
    host: chartmuseum.cluster.local
  tls:
  - hosts:
    - chartmuseum.cluster.local
    secretName: "tls-cluster-local-s"
